--- a/.github/workflows/push-docker-hub.yml
+++ b/.github/workflows/push-docker-hub.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/judger:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/php-wkhtmltopdf-api:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
